fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ p {
 
 h1, h2, p {
     color: #fff;
+    margin: 20px;
 }
 
 a {
@@ -56,7 +57,7 @@ hr {
 
 .cards {
     background-color: #131212;
-    max-width: 300px;
+    max-width: 295px;
     height: 515px;
     padding: 20px;
     margin: 20px;
@@ -64,6 +65,20 @@ hr {
 
 .cards img {
     max-width: 300px;
+}
+
+.bottom {
+ display: flex;
+ flex-wrap: wrap;   
+}
+
+.bottom img {
+    max-width: 300px;
+    margin: 20px;
+}
+
+.quote {
+    margin-top: 165px;
 }
 
 footer {
